# sedgewick-algorithms-python

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
algorithms/: typing.py
algorithms/chap01/: binary_search.py
algorithms/utils/: __init__.py  reader.py
